--- a/scripts/Area-Burned.Rmd
+++ b/scripts/Area-Burned.Rmd
@@ -312,7 +312,7 @@ ggplot(fire_class, aes(fire_yr)) +scale_fill_brewer(palette = "Spectral") +
   ylab("Frequency") +
 
   theme_bw() + theme(legend.position = "bottom") +  
-    scale_fill_brewer(palette = "Spectral", name = "Fire size class", labels = c("400-999", "1,000-1,999", "2,000-4,999", "5,000-9,999", "10,000-19,999", "20,000-49,999", "50,000-99,999", "100,000 +")) +
+    scale_fill_brewer(palette = "Spectral", name = "Fire size class (ha)", labels = c("400-999", "1,000-1,999", "2,000-4,999", "5,000-9,999", "10,000-19,999", "20,000-49,999", "50,000-99,999", "100,000 +")) +
   theme(panel.grid.major = element_blank()) +
     theme(axis.title.y = element_text(size = 11, hjust = 0.5, vjust = 1.1),
         axis.text.x = element_text(size = 10, color = "black"),
