--- a/scripts/Area-Burned.Rmd
+++ b/scripts/Area-Burned.Rmd
@@ -205,12 +205,76 @@ d1_18 = rbind(d1_4, d5_18)
 head(d1_18)
 ```
 
+# Summary Data
 
 ```{r}
 fire_frq = d1_18 %>% count(fire_yr, name='n_fires')
 fire_frq = as.data.frame(fire_frq)
 ```
 
+
+```{r}
+( sumdat2 = summarise( group_by(d1_18, "Fire Year" = fire_yr),
+n = n(),
+Mean = mean(area_ha),
+SD = sd(area_ha),
+Median = median(area_ha),
+Minimum = min(area_ha),
+Maximum = max(area_ha) ) )
+```
+
+```{r}
+summarise(d1_18, 
+n = n(),
+Mean = mean(area_ha),
+SD = sd(area_ha),
+Median = median(area_ha),
+Minimum = min(area_ha),
+Maximum = max(area_ha) ) 
+```
+## Fire size class
+
+Fire Size classes in hectares
+1.  400-999
+2.  1,000 - 1,999
+3.  2,000 - 4,999
+4.  5,000 - 9,999
+5.  10,000 - 19,999
+6.  20,000 - 49,999
+7.  50,000 - 99,999
+8.  100,000 +
+
+```{r}
+head(d1_18)
+```
+
+```{r}
+d1_18 %>% mutate(area_ha_round = round(area_ha, 0))
+```
+
+
+```{r}
+
+fire_class = d1_18  %>% mutate(area_ha_round = round(area_ha, 0)) %>% 
+  mutate(fire_size_class = ifelse(area_ha_round %in% 400:999, "1",
+                                     ifelse(area_ha_round %in% 1000:1999, "2",
+                                            ifelse(area_ha_round %in% 2000:4999, "3",
+                                                   ifelse(area_ha_round %in% 5000:9999, "4",
+                                                          ifelse(area_ha_round %in% 10000:19999, "5",
+                                                                 ifelse(area_ha_round %in% 20000:49999, "6",
+                                                   ifelse(area_ha_round %in% 50000:99999, "7", "8"))))))))
+
+fire_class
+```
+
+```{r}
+fire_class_ct = fire_class %>% count(fire_size_class, name='count')
+fire_class_ct = as.data.frame(fire_class_ct)
+fire_class_ct
+```
+
+
+# Figures
 
 ```{r}
 plot_frq = ggplot(fire_frq, aes(fire_yr, n_fires)) +
@@ -280,44 +344,6 @@ ggplot(head(fire_area_frq), aes(x=fire_yr)) +
 
 
 
-Fire Size classes in hectares
-- 400-999
-- 1,000 - 1,999
-- 2,000 - 4,999
-- 5,000 - 9,999
-- 10,000 - 19,999
-- 20,000 - 49,999
-- 50,000 - 99,999
-- 100,000 +
-
-```{r}
-head(d1_18)
-```
-
-```{r}
-d1_18 %>% mutate(area_ha_round = round(area_ha, 0))
-```
-
-
-```{r}
-
-fire_class = d1_18  %>% mutate(area_ha_round = round(area_ha, 0)) %>% 
-  mutate(fire_size_class = ifelse(area_ha_round %in% 400:999, "1",
-                                     ifelse(area_ha_round %in% 1000:1999, "2",
-                                            ifelse(area_ha_round %in% 2000:4999, "3",
-                                                   ifelse(area_ha_round %in% 5000:9999, "4",
-                                                          ifelse(area_ha_round %in% 10000:19999, "5",
-                                                                 ifelse(area_ha_round %in% 20000:49999, "6",
-                                                   ifelse(area_ha_round %in% 50000:99999, "7", "8"))))))))
-
-fire_class
-```
-
-```{r}
-fire_class_ct = fire_class %>% count(fire_size_class, name='count')
-fire_class_ct = as.data.frame(fire_class_ct)
-fire_class_ct
-```
 
 ```{r}
 plot_class1 = ggplot(fire_class_ct, aes(fire_size_class, count)) +
