up date with 2019 and 2020, but need to replace 2019 and 2020 data

--- a/scripts/Area-Burned.Rmd
+++ b/scripts/Area-Burned.Rmd
@@ -83,6 +83,9 @@ f15 = st_read("../data/clean-shapefile/fires2015.shp", "fires2015")
 f16 = st_read("../data/clean-shapefile/fires2016.shp", "fires2016") 
 f17 = st_read("../data/clean-shapefile/fires2017.shp", "fires2017") 
 f18 = st_read("../data/clean-shapefile/fires2018.shp", "fires2018")
+f19 = st_read("../data/clean-shapefile/fires2019.shp", "fires2019")
+f20 = st_read("../data/clean-shapefile/fires2020.shp", "fires2020")
+
 ```
 
 
@@ -117,6 +120,8 @@ st_geometry(f15) <- NULL
 st_geometry(f16) <- NULL
 st_geometry(f17) <- NULL
 st_geometry(f18) <- NULL
+st_geometry(f19) <- NULL
+st_geometry(f20) <- NULL
 ```
 
 ```{r}
@@ -142,6 +147,8 @@ f15_df = as.data.frame(f15)
 f16_df = as.data.frame(f16)
 f17_df = as.data.frame(f17)
 f18_df = as.data.frame(f18)
+f19_df = as.data.frame(f19)
+f20_df = as.data.frame(f20)
 ```
 
 
@@ -164,6 +171,8 @@ f15_uni = f15_df %>% mutate(fire_ID =  paste(fire_yr, "ru", ID_obj, sep = '_'))
 f16_uni = f16_df %>% mutate(fire_ID =  paste(fire_yr, "ru", ID_obj, sep = '_'))
 f17_uni = f17_df %>% mutate(fire_ID =  paste(fire_yr, "ru", ID_obj, sep = '_'))
 f18_uni = f18_df %>% mutate(fire_ID =  paste(fire_yr, "ru", ID_obj, sep = '_'))
+f19_uni = f19_df %>% mutate(fire_ID =  paste(fire_yr, "ru", ID_obj, sep = '_'))
+f20_uni = f20_df %>% mutate(fire_ID =  paste(fire_yr, "ru", ID_obj, sep = '_'))
 ```
 
 
@@ -188,6 +197,7 @@ c11_12 = rbind(f11_uni, f12_uni)
 c13_14 = rbind(f13_uni, f14_uni)
 c15_16 = rbind(f15_uni, f16_uni)
 c17_18 = rbind(f17_uni, f18_uni)
+c19_20 = rbind(f19_uni, f20_uni)
 ```
 
 ```{r}
@@ -196,25 +206,26 @@ d5_8 = rbind(c05_06, c07_08)
 d9_12 = rbind(c09_10, c11_12)
 d13_16 = rbind(c13_14, c15_16)
 d13_18 = rbind(d13_16, c17_18)
-d9_18 = rbind(d9_12, d13_18) 
-d5_18 = rbind(d5_8, d9_18) 
-d1_18 = rbind(d1_4, d5_18) 
+d13_20 = rbind(d13_18, c19_20)
+d9_20 = rbind(d9_12, d13_20) 
+d5_20 = rbind(d5_8, d9_20) 
+d1_20 = rbind(d1_4, d5_20) 
 ```
 
 ```{r}
-head(d1_18)
+head(d1_20)
 ```
 
 # Summary Data
 
 ```{r}
-fire_frq = d1_18 %>% count(fire_yr, name='n_fires')
+fire_frq = d1_20 %>% count(fire_yr, name='n_fires')
 fire_frq = as.data.frame(fire_frq)
 ```
 
 
 ```{r}
-( sumdat2 = summarise( group_by(d1_18, "Fire Year" = fire_yr),
+( sumdat2 = summarise( group_by(d1_20, "Fire Year" = fire_yr),
 n = n(),
 Mean = mean(area_ha),
 SD = sd(area_ha),
@@ -226,6 +237,7 @@ Maximum = max(area_ha) ) )
 ```{r}
 summarise(d1_18, 
 n = n(),
+Total = sum(area_ha),
 Mean = mean(area_ha),
 SD = sd(area_ha),
 Median = median(area_ha),
